src/converter.leg.c
/* A recursive-descent parser generated by peg 0.1.18 */

#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#define YYRULECOUNT 65
#line 1 "src/converter.leg"

#include "util.h"

#define YYSTYPE cybuben_node*
#define YY_CTX_LOCAL
#define YY_CTX_MEMBERS \
  FILE* stream; \
  cybuben_string* result;
#define YY_INPUT(yy, buf, result, max_size) \
  {	\
    int yyc = getc(yy->stream); \
    result = (EOF == yyc) ? 0 : (*(buf) = yyc, 1); \
    yyprintf((stderr, "<%c>", yyc)); \
  }

#ifndef YY_MALLOC
#define YY_MALLOC(C, N)		malloc(N)
#endif
#ifndef YY_REALLOC
#define YY_REALLOC(C, P, N)	realloc(P, N)
#endif
#ifndef YY_FREE
#define YY_FREE(C, P)		free(P)
#endif
#ifndef YY_LOCAL
#define YY_LOCAL(T)	static T
#endif
#ifndef YY_ACTION
#define YY_ACTION(T)	static T
#endif
#ifndef YY_RULE
#define YY_RULE(T)	static T
#endif
#ifndef YY_PARSE
#define YY_PARSE(T)	T
#endif
#ifndef YYPARSE
#define YYPARSE		yyparse
#endif
#ifndef YYPARSEFROM
#define YYPARSEFROM	yyparsefrom
#endif
#ifndef YYRELEASE
#define YYRELEASE	yyrelease
#endif
#ifndef YY_BEGIN
#define YY_BEGIN	( yy->__begin= yy->__pos, 1)
#endif
#ifndef YY_END
#define YY_END		( yy->__end= yy->__pos, 1)
#endif
#ifdef YY_DEBUG
# define yyprintf(args)	fprintf args
#else
# define yyprintf(args)
#endif
#ifndef YYSTYPE
#define YYSTYPE	int
#endif
#ifndef YY_STACK_SIZE
#define YY_STACK_SIZE 128
#endif

#ifndef YY_BUFFER_SIZE
#define YY_BUFFER_SIZE 1024
#endif

#ifndef YY_PART

typedef struct _yycontext yycontext;
typedef void (*yyaction)(yycontext *yy, char *yytext, int yyleng);
typedef struct _yythunk { int begin, end;  yyaction  action;  struct _yythunk *next; } yythunk;

struct _yycontext {
  char     *__buf;
  int       __buflen;
  int       __pos;
  int       __limit;
  char     *__text;
  int       __textlen;
  int       __begin;
  int       __end;
  int       __textmax;
  yythunk  *__thunks;
  int       __thunkslen;
  int       __thunkpos;
  YYSTYPE   __;
  YYSTYPE  *__val;
  YYSTYPE  *__vals;
  int       __valslen;
#ifdef YY_CTX_MEMBERS
  YY_CTX_MEMBERS
#endif
};

#ifdef YY_CTX_LOCAL
#define YY_CTX_PARAM_	yycontext *yyctx,
#define YY_CTX_PARAM	yycontext *yyctx
#define YY_CTX_ARG_	yyctx,
#define YY_CTX_ARG	yyctx
#ifndef YY_INPUT
#define YY_INPUT(yy, buf, result, max_size)		\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#else
#define YY_CTX_PARAM_
#define YY_CTX_PARAM
#define YY_CTX_ARG_
#define YY_CTX_ARG
yycontext _yyctx= { 0, 0 };
yycontext *yyctx= &_yyctx;
#ifndef YY_INPUT
#define YY_INPUT(buf, result, max_size)			\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#endif

YY_LOCAL(int) yyrefill(yycontext *yy)
{
  int yyn;
  while (yy->__buflen - yy->__pos < 512)
    {
      yy->__buflen *= 2;
      yy->__buf= (char *)YY_REALLOC(yy, yy->__buf, yy->__buflen);
    }
#ifdef YY_CTX_LOCAL
  YY_INPUT(yy, (yy->__buf + yy->__pos), yyn, (yy->__buflen - yy->__pos));
#else
  YY_INPUT((yy->__buf + yy->__pos), yyn, (yy->__buflen - yy->__pos));
#endif
  if (!yyn) return 0;
  yy->__limit += yyn;
  return 1;
}

YY_LOCAL(int) yymatchDot(yycontext *yy)
{
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  ++yy->__pos;
  return 1;
}

YY_LOCAL(int) yymatchChar(yycontext *yy, int c)
{
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  if ((unsigned char)yy->__buf[yy->__pos] == c)
    {
      ++yy->__pos;
      yyprintf((stderr, "  ok   yymatchChar(yy, %c) @ %s\n", c, yy->__buf+yy->__pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchChar(yy, %c) @ %s\n", c, yy->__buf+yy->__pos));
  return 0;
}

YY_LOCAL(int) yymatchString(yycontext *yy, const char *s)
{
  int yysav= yy->__pos;
  while (*s)
    {
      if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
      if (yy->__buf[yy->__pos] != *s)
        {
          yy->__pos= yysav;
          return 0;
        }
      ++s;
      ++yy->__pos;
    }
  return 1;
}

YY_LOCAL(int) yymatchClass(yycontext *yy, unsigned char *bits)
{
  int c;
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  c= (unsigned char)yy->__buf[yy->__pos];
  if (bits[c >> 3] & (1 << (c & 7)))
    {
      ++yy->__pos;
      yyprintf((stderr, "  ok   yymatchClass @ %s\n", yy->__buf+yy->__pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchClass @ %s\n", yy->__buf+yy->__pos));
  return 0;
}

YY_LOCAL(void) yyDo(yycontext *yy, yyaction action, int begin, int end)
{
  while (yy->__thunkpos >= yy->__thunkslen)
    {
      yy->__thunkslen *= 2;
      yy->__thunks= (yythunk *)YY_REALLOC(yy, yy->__thunks, sizeof(yythunk) * yy->__thunkslen);
    }
  yy->__thunks[yy->__thunkpos].begin=  begin;
  yy->__thunks[yy->__thunkpos].end=    end;
  yy->__thunks[yy->__thunkpos].action= action;
  ++yy->__thunkpos;
}

YY_LOCAL(int) yyText(yycontext *yy, int begin, int end)
{
  int yyleng= end - begin;
  if (yyleng <= 0)
    yyleng= 0;
  else
    {
      while (yy->__textlen < (yyleng + 1))
	{
	  yy->__textlen *= 2;
	  yy->__text= (char *)YY_REALLOC(yy, yy->__text, yy->__textlen);
	}
      memcpy(yy->__text, yy->__buf + begin, yyleng);
    }
  yy->__text[yyleng]= '\0';
  return yyleng;
}

YY_LOCAL(void) yyDone(yycontext *yy)
{
  int pos;
  for (pos= 0;  pos < yy->__thunkpos;  ++pos)
    {
      yythunk *thunk= &yy->__thunks[pos];
      int yyleng= thunk->end ? yyText(yy, thunk->begin, thunk->end) : thunk->begin;
      yyprintf((stderr, "DO [%d] %p %s\n", pos, thunk->action, yy->__text));
      thunk->action(yy, yy->__text, yyleng);
    }
  yy->__thunkpos= 0;
}

YY_LOCAL(void) yyCommit(yycontext *yy)
{
  if ((yy->__limit -= yy->__pos))
    {
      memmove(yy->__buf, yy->__buf + yy->__pos, yy->__limit);
    }
  yy->__begin -= yy->__pos;
  yy->__end -= yy->__pos;
  yy->__pos= yy->__thunkpos= 0;
}

YY_LOCAL(int) yyAccept(yycontext *yy, int tp0)
{
  if (tp0)
    {
      fprintf(stderr, "accept denied at %d\n", tp0);
      return 0;
    }
  else
    {
      yyDone(yy);
      yyCommit(yy);
    }
  return 1;
}

YY_LOCAL(void) yyPush(yycontext *yy, char *text, int count)
{
  yy->__val += count;
  while (yy->__valslen <= yy->__val - yy->__vals)
    {
      long offset= yy->__val - yy->__vals;
      yy->__valslen *= 2;
      yy->__vals= (YYSTYPE *)YY_REALLOC(yy, yy->__vals, sizeof(YYSTYPE) * yy->__valslen);
      yy->__val= yy->__vals + offset;
    }
}
YY_LOCAL(void) yyPop(yycontext *yy, char *text, int count)   { yy->__val -= count; }
YY_LOCAL(void) yySet(yycontext *yy, char *text, int count)   { yy->__val[count]= yy->__; }

#endif /* YY_PART */

#define	YYACCEPT	yyAccept(yy, yythunkpos0)

YY_RULE(int) yy_exclamation(yycontext *yy); /* 65 */
YY_RULE(int) yy_question(yycontext *yy); /* 64 */
YY_RULE(int) yy_rightGuillemet(yycontext *yy); /* 63 */
YY_RULE(int) yy_leftGuillemet(yycontext *yy); /* 62 */
YY_RULE(int) yy_colon(yycontext *yy); /* 61 */
YY_RULE(int) yy_backQuote(yycontext *yy); /* 60 */
YY_RULE(int) yy_dollar(yycontext *yy); /* 59 */
YY_RULE(int) yy_smallZ(yycontext *yy); /* 58 */
YY_RULE(int) yy_smallY(yycontext *yy); /* 57 */
YY_RULE(int) yy_smallX(yycontext *yy); /* 56 */
YY_RULE(int) yy_smallW(yycontext *yy); /* 55 */
YY_RULE(int) yy_smallV(yycontext *yy); /* 54 */
YY_RULE(int) yy_smallU(yycontext *yy); /* 53 */
YY_RULE(int) yy_smallT(yycontext *yy); /* 52 */
YY_RULE(int) yy_smallS(yycontext *yy); /* 51 */
YY_RULE(int) yy_smallR(yycontext *yy); /* 50 */
YY_RULE(int) yy_smallQ(yycontext *yy); /* 49 */
YY_RULE(int) yy_smallP(yycontext *yy); /* 48 */
YY_RULE(int) yy_smallO(yycontext *yy); /* 47 */
YY_RULE(int) yy_smallN(yycontext *yy); /* 46 */
YY_RULE(int) yy_smallM(yycontext *yy); /* 45 */
YY_RULE(int) yy_smallL(yycontext *yy); /* 44 */
YY_RULE(int) yy_smallK(yycontext *yy); /* 43 */
YY_RULE(int) yy_smallJ(yycontext *yy); /* 42 */
YY_RULE(int) yy_smallI(yycontext *yy); /* 41 */
YY_RULE(int) yy_smallH(yycontext *yy); /* 40 */
YY_RULE(int) yy_smallG(yycontext *yy); /* 39 */
YY_RULE(int) yy_smallF(yycontext *yy); /* 38 */
YY_RULE(int) yy_smallE(yycontext *yy); /* 37 */
YY_RULE(int) yy_smallD(yycontext *yy); /* 36 */
YY_RULE(int) yy_smallC(yycontext *yy); /* 35 */
YY_RULE(int) yy_smallB(yycontext *yy); /* 34 */
YY_RULE(int) yy_smallA(yycontext *yy); /* 33 */
YY_RULE(int) yy_largeZ(yycontext *yy); /* 32 */
YY_RULE(int) yy_largeY(yycontext *yy); /* 31 */
YY_RULE(int) yy_largeX(yycontext *yy); /* 30 */
YY_RULE(int) yy_largeW(yycontext *yy); /* 29 */
YY_RULE(int) yy_largeV(yycontext *yy); /* 28 */
YY_RULE(int) yy_largeU(yycontext *yy); /* 27 */
YY_RULE(int) yy_largeT(yycontext *yy); /* 26 */
YY_RULE(int) yy_largeS(yycontext *yy); /* 25 */
YY_RULE(int) yy_largeR(yycontext *yy); /* 24 */
YY_RULE(int) yy_largeQ(yycontext *yy); /* 23 */
YY_RULE(int) yy_largeP(yycontext *yy); /* 22 */
YY_RULE(int) yy_largeO(yycontext *yy); /* 21 */
YY_RULE(int) yy_largeN(yycontext *yy); /* 20 */
YY_RULE(int) yy_largeM(yycontext *yy); /* 19 */
YY_RULE(int) yy_largeL(yycontext *yy); /* 18 */
YY_RULE(int) yy_largeK(yycontext *yy); /* 17 */
YY_RULE(int) yy_largeJ(yycontext *yy); /* 16 */
YY_RULE(int) yy_largeI(yycontext *yy); /* 15 */
YY_RULE(int) yy_largeH(yycontext *yy); /* 14 */
YY_RULE(int) yy_largeG(yycontext *yy); /* 13 */
YY_RULE(int) yy_largeF(yycontext *yy); /* 12 */
YY_RULE(int) yy_largeE(yycontext *yy); /* 11 */
YY_RULE(int) yy_largeD(yycontext *yy); /* 10 */
YY_RULE(int) yy_largeC(yycontext *yy); /* 9 */
YY_RULE(int) yy_largeB(yycontext *yy); /* 8 */
YY_RULE(int) yy_largeA(yycontext *yy); /* 7 */
YY_RULE(int) yy_asis(yycontext *yy); /* 6 */
YY_RULE(int) yy_non_alphabet(yycontext *yy); /* 5 */
YY_RULE(int) yy_alphabet(yycontext *yy); /* 4 */
YY_RULE(int) yy_letter(yycontext *yy); /* 3 */
YY_RULE(int) yy_letters(yycontext *yy); /* 2 */
YY_RULE(int) yy_start(yycontext *yy); /* 1 */

YY_ACTION(void) yy_1_asis(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_asis\n"));
  {
#line 567
  
        __ = cybuben_node_create(yytext);
    ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_exclamation(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_exclamation\n"));
  {
#line 556
  
        if (cybuben_includes_char(yytext, '~')) {
            __ = cybuben_node_create("\u055C");
        } else {
            __ = cybuben_node_create("\u055B");
        }
    ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_question(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_question\n"));
  {
#line 550
  
        __ = cybuben_node_create("\u055E");
    ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_rightGuillemet(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_rightGuillemet\n"));
  {
#line 544
  
        __ = cybuben_node_create("\u00BB");
    ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_leftGuillemet(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_leftGuillemet\n"));
  {
#line 538
  
        __ = cybuben_node_create("\u00AB");
    ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_colon(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_colon\n"));
  {
#line 532
  
        __ = cybuben_node_create("\u0589");
    ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_backQuote(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_backQuote\n"));
  {
#line 526
  
        __ = cybuben_node_create("\u055D");
    ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_dollar(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_dollar\n"));
  {
#line 520
  
        __ = cybuben_node_create("\u058F");
    ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_smallZ(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_smallZ\n"));
  {
#line 509
  
        if (cybuben_includes_char(yytext, 'h')) {
            __ = cybuben_node_create("\u056A");
        } else {
            __ = cybuben_node_create("\u0566");
        }
    ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_smallY(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_smallY\n"));
  {
#line 499
  
        if (cybuben_includes_char(yytext, '\'')) {
            __ = cybuben_node_create("\u0568");
        } else {
            __ = cybuben_node_create("\u0575");
        }
    ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_smallX(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_smallX\n"));
  {
#line 493
  
        __ = cybuben_node_create("\u056D");
    ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_smallW(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_smallW\n"));
  {
#line 487
  
        __ = cybuben_node_create("\u0582");
    ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_smallV(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_smallV\n"));
  {
#line 477
  
        if (cybuben_includes_char(yytext, 'o')) {
            __ = cybuben_node_create("\u0578");
        } else {
            __ = cybuben_node_create("\u057E");
        }
    ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_smallU(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_smallU\n"));
  {
#line 471
  
        __ = cybuben_node_create("\u0578\u0582");
    ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_smallT(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_smallT\n"));
  {
#line 459
  
        if (cybuben_includes_char(yytext, 'w')) {
            __ = cybuben_node_create("\u0573");
        } else if (cybuben_includes_char(yytext, '\'')) {
            __ = cybuben_node_create("\u0569");
        } else {
            __ = cybuben_node_create("\u057F");
        }
    ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_smallS(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_smallS\n"));
  {
#line 449
  
        if (cybuben_includes_char(yytext, 'h')) {
            __ = cybuben_node_create("\u0577");
        } else {
            __ = cybuben_node_create("\u057D");
        }
    ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_smallR(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_smallR\n"));
  {
#line 439
  
        if (strcmp(yytext, "rr") == 0) {
            __ = cybuben_node_create("\u057C");
        } else {
            __ = cybuben_node_create("\u0580");
        }
    ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_smallQ(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_smallQ\n"));
  {
#line 433
  
        __ = cybuben_node_create("\u0584");
    ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_smallP(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
